--- a/.github/workflows/check-app.yaml
+++ b/.github/workflows/check-app.yaml
@@ -38,5 +38,5 @@ jobs:
 
       - uses: rstudio/shinytest2/actions/test-app@v1
         with:
-          path: "app"
+          app-dir: "app"
           
